--- a/-a7gitvsc/Expo92/index.html
+++ b/-a7gitvsc/Expo92/index.html
@@ -12,7 +12,7 @@
     <div class="aside">
       <h4>Índice</h4>
       <ol>
-        <li><a href="#introducción">Introducción</a></li>
+        <li><a href="#introducción">Introduccion</a></li>
         <li>
           <a href="#Arquitectura">Arquitectura del paisaje en la Exposición</a>
         </li>
