--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Expo92/style.css" />
+    <link rel="stylesheet" href="-a7gitvsc/Expo92/style.css" />
     <title>Expo 92</title>
   </head>
   <header><span>E</span>XPO 92</header>
@@ -44,7 +44,7 @@
           de pico y cresta multicolor
         </p>
         <figure>
-          <img src="Expo92/Material/img/imagen1.jpg" />
+          <img src="-a7gitvsc/Expo92/Material/img/imagen1.jpg" />
           <figcaption>Curro, la mascota oficial de la Expo 92</figcaption>
         </figure>
       </div>
@@ -110,7 +110,7 @@
           con la arquitectura y el urbanismo. <br /><br />
         </p>
         <figure>
-          <img src="Expo92/Material/img/imagen2.jpg" />
+          <img src="-a7gitvsc/Expo92/Material/img/imagen2.jpg" />
           <figcaption>
             Panorámica del lago de España con los pabellones autonómicos al
             fondo
@@ -168,15 +168,15 @@
       </div>
       <div class="bloque">
         <figure>
-          <img src="Expo92/Material/img/imagen3.jpg" id="img3" />
+          <img src="-a7gitvsc/Expo92/Material/img/imagen3.jpg" id="img3" />
           <figcaption>Pabellón de España</figcaption>
         </figure>
         <figure>
-          <img src="Expo92/Material/img/imagen4.jpg" id="img3" />
+          <img src="-a7gitvsc/Expo92/Material/img/imagen4.jpg" id="img3" />
           <figcaption>Pabellón de la navegación</figcaption>
         </figure>
         <figure>
-          <img src="Expo92/Material/img/imagen5.jpg" id="img3" />
+          <img src="-a7gitvsc/Expo92/Material/img/imagen5.jpg" id="img3" />
           <figcaption>Pabellón de Andalucía</figcaption>
         </figure>
       </div>
